--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ body, html {
 .brush-settings.pattern .brush-scale { display: none; }
 .btn-single { margin-top: -2px; margin-left: 6px; }
 .btn-group.btn-reset { margin-left: 10px; }
-.btn-share i { margin-top: 0; margin-right: 2px; margin-left: -2px; }
+.btn-share i, .btn-pause i { margin-top: 0; margin-right: 2px; margin-left: -2px; }
 .btn-info i { margin-top: 3px; }
 
 .share { display: inline-block; position: relative; }
