--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ body, html {
 .brush-settings.round .pattern-brush-scale,
 .brush-settings.noise .pattern-brush-scale { display: none; }
 .brush-settings.pattern .brush-scale { display: none; }
-.btn-single { margin-top: -2px; margin-left: 6px; }
+.btn-single { margin-top: -2px; }
 .btn-group.btn-reset { margin-left: 10px; }
 .btn-share i, .btn-pause i { margin-top: 0; margin-right: 2px; margin-left: -2px; }
 .btn-info i { margin-top: 3px; }
