--- a/main.css
+++ b/main.css
@@ -53,5 +53,5 @@ body, html {
 .share:hover .dropdown { visibility: visible; }
 .share .fb-like { margin-bottom: 4px; }
 
-.info .twitter-share-button { position: relative; top: 4px; }
+.info .twitter-share-button { position: relative; top: 3px; margin-left: 5px; }
 
