--- a/main.css
+++ b/main.css
@@ -62,3 +62,6 @@ body, html {
 
 .info .twitter-share-button { position: relative; top: 3px; margin-left: 5px; }
 
+.modal-overlay { position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: rgba(0,0,0,0.25); }
+.loading .modal { margin-top: -50px; width: 200px; margin-left: -100px; }
+.loading .modal h5 { text-align: center; }
